# Desafio_2

Desafio_2/: CMakeLists.txt  ESTE_ES_EL_NUEVO.csv  main.cpp  resultado_mundial_final.csv
Desafio_2/Clases/: equipo.cpp  equipo.h  gestorarchivo.cpp  gestorarchivo.h  grupo.cpp  grupo.h  jugador.cpp  jugador.h  partido.cpp  partido.h
